# Polya_Restoration

./: .gitignore  Image.java  Lee_filter_C.m  PUPFilter.java  README.md  computelee.c  computelee.mexa64  computelee.mexmaci64  iterated_lee.m  myvar.m  pixel.java
c_plus_plus/: CMakeLists.txt  main.cpp  main_bak.cpp  test_matlab.cpp
c_plus_plus/cmake/: DownloadEigen.cmake  DownloadGTest.cmake  DownloadProject.CMakeLists.cmake.in  DownloadProject.cmake
c_plus_plus/include/common/: EigenHelpers.h  EigenOperators.h  EigenTypes.h
c_plus_plus/include/matlab/: MatlabProxy.h
c_plus_plus/include/polya/: polya.h
c_plus_plus/include/qt/: EdgeToolbar.h  NoiseToolbar.h  OutputsToolbar.h  PolyaToolbar.h  QuantizeToolbar.h  imageviewer.h  slidersgroup.h
c_plus_plus/matlab_libs/: canny.h  canny.lib  get_sparse_adj.h  get_sparse_adj.lib  polyaTools.h  polyaTools.lib
c_plus_plus/src/: CMakeLists.txt
c_plus_plus/src/matlab/: CMakeLists.txt  MatlabProxy.cpp
c_plus_plus/src/polya/: CMakeLists.txt  polya.cpp
c_plus_plus/src/qt/: EdgeToolbar.cpp  NoiseToolbar.cpp  OutputsToolbar.cpp  PolyaToolbar.cpp  QuantizeToolbar.cpp  imageviewer.cpp  slidersgroup.cpp
c_plus_plus/test/: CMakeLists.txt
c_plus_plus/test/common/: CMakeLists.txt  TestEigenHelpers.cpp  TestEigenOperators.cpp
c_plus_plus/test/polya/: CMakeLists.txt  TestPolya.cpp
matlab/scripts/: add_bursty_noise.m  add_gauss_markov_noise.m  add_gaussian_noise.m  add_noise.m  adjacency_minus_edge_1.m  adjacency_minus_edge_d.m  compute_error.m  csnr.m  edge_disconnect.m  edges.csv  enl.m  get_sparse_adj.m  image_from_urns.m  image_from_urns_proportional.m  initialize_polya_urns.m  initialize_polya_urns_proportional.m  inverse_quantize_image.m  leefilt.m  main.m  matrix_sample.m  myvar.m  pixel_number.m  polya.m  polya_eigen.cpp  polya_gui.mlapp  polyafilt.m  quantize_image.m  sparse_adj_matrix.m  ssnr.m  test_adjacency_minus_edge.m  test_bw.m  test_colour.m  test_edge_detection.m  test_graph_plot.m  test_grayscale.m  thesis_data.m
matlab/scripts/frames/: polya.avi
matlab/scripts/frames/aerial1_2norm_edge/: aerial1_speckle_and_binary_erasure_high_optimal.tiff  aerial1_speckle_and_binary_erasure_high_optimal_median_50N.tiff  aerial1_speckle_and_binary_erasure_low_noise.tiff  aerial1_speckle_and_binary_erasure_low_optimal.tiff  aerial1_speckle_and_binary_erasure_low_optimal_median_2N.tiff  aerial1_speckle_and_binary_erasure_mid_optimal.tiff  aerial1_speckle_and_binary_erasure_mid_optimal_median_50N.tiff  aerial1_speckle_and_gauss_markov_high_optimal.tiff  aerial1_speckle_and_gauss_markov_high_optimal_median_2N.tiff  aerial1_speckle_and_gauss_markov_low_noise.tiff  aerial1_speckle_and_gauss_markov_low_optimal.tiff  aerial1_speckle_and_gauss_markov_low_optimal_median_2N.tiff  aerial1_speckle_and_gauss_markov_mid_optimal.tiff  aerial1_speckle_and_gauss_markov_mid_optimal_median_2N.tiff  aerial1_speckle_high_optimal.tiff  aerial1_speckle_high_optimal_median_4N.tiff  aerial1_speckle_low_noise.tiff  aerial1_speckle_low_optimal.tiff  aerial1_speckle_low_optimal_median_2N.tiff  aerial1_speckle_mid_optimal.tiff  aerial1_speckle_mid_optimal_median_2N.tiff
matlab/scripts/frames/aerial1_2norm_no_edge/: aerial1_speckle_and_binary_erasure_high_noise.tiff  aerial1_speckle_and_binary_erasure_high_optimal.tiff  aerial1_speckle_and_binary_erasure_low_optimal.tiff  aerial1_speckle_and_binary_erasure_low_optimal_median_2N.tiff  aerial1_speckle_and_binary_erasure_low_optimal_median_3N.tiff  aerial1_speckle_and_binary_erasure_mid_noise.tiff  aerial1_speckle_and_binary_erasure_mid_optimal.tiff  aerial1_speckle_and_binary_erasure_mid_optimal_median_50N.tiff  aerial1_speckle_and_gauss_markov_high_noise.tiff  aerial1_speckle_and_gauss_markov_high_optimal.tiff  aerial1_speckle_and_gauss_markov_high_optimal_median_21N.tiff  aerial1_speckle_and_gauss_markov_high_optimal_median_2N.tiff  aerial1_speckle_and_gauss_markov_low_noise.tiff  aerial1_speckle_and_gauss_markov_low_optimal.tiff  aerial1_speckle_and_gauss_markov_low_optimal_median_2N.tiff  aerial1_speckle_and_gauss_markov_low_optimal_median_3N.tiff  aerial1_speckle_and_gauss_markov_mid_noise.tiff  aerial1_speckle_and_gauss_markov_mid_optimal.tiff  aerial1_speckle_and_gauss_markov_mid_optimal_median_2N.tiff  aerial1_speckle_high_noise.tiff  aerial1_speckle_high_optimal.tiff  aerial1_speckle_high_optimal_median_4N.tiff  aerial1_speckle_low_optimal.tiff  aerial1_speckle_low_optimal_median_2N.tiff  aerial1_speckle_mid_noise.tiff  aerial1_speckle_mid_optimal.tiff  aerial1_speckle_mid_optimal_median_2N.tiff
matlab/scripts/frames/aerial1_2norm_no_edge_old/: aerial1_speckle_and_binary_erasure_high_noise.tiff  aerial1_speckle_and_binary_erasure_high_optimal_median_50N.tiff  aerial1_speckle_and_binary_erasure_low_noise.tiff  aerial1_speckle_and_binary_erasure_low_optimal.tiff  aerial1_speckle_and_gauss_markov_high_optimal.tiff  aerial1_speckle_and_gauss_markov_low_optimal.tiff  aerial1_speckle_and_gauss_markov_mid_noise.tiff  aerial1_speckle_and_gauss_markov_mid_optimal.tiff  aerial1_speckle_and_gauss_markov_mid_optimal_median_6N.tiff  aerial1_speckle_high_noise.tiff  aerial1_speckle_high_optimal.tiff  aerial1_speckle_high_optimal_median_15N.tiff  aerial1_speckle_low_noise.tiff  aerial1_speckle_low_optimal.tiff  aerial1_speckle_low_optimal_median_3N.tiff  aerial1_speckle_mid_noise.tiff  aerial1_speckle_mid_optimal.tiff  aerial1_speckle_mid_optimal_median_11N.tiff
matlab/scripts/frames/goldengate_2norm_edge/: goldengate_speckle_and_binary_erasure_high_optimal.tiff  goldengate_speckle_and_binary_erasure_high_optimal_median_50N.tiff  goldengate_speckle_and_binary_erasure_low_noise.tiff  goldengate_speckle_and_binary_erasure_low_optimal.tiff  goldengate_speckle_and_binary_erasure_low_optimal_median_4N.tiff  goldengate_speckle_and_binary_erasure_mid_optimal.tiff  goldengate_speckle_and_binary_erasure_mid_optimal_median_37N.tiff  goldengate_speckle_and_gauss_markov_high_noise.tiff  goldengate_speckle_and_gauss_markov_high_optimal.tiff  (+11 more)
matlab/scripts/optimal_log/: Initial_data_analysis.xlsx
(+200 files in other folders)
